# pv

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  commands.rs  crypto.rs  errors.rs  lib.rs  main.rs  pass.rs  utils.rs
src/commands/: add.rs  delete.rs  get_password.rs  init.rs  list_passwords.rs  mod.rs  update.rs
