[package]
name = "pv"
version = "0.1.0"
edition = "2021"
authors = ["nei7"]
license = "MIT"
repository = "https://github.com/nei7/pv"
homepage = "https://github.com/nei7/pv"
readme = "README.md"


[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
data-encoding = "2.3.2"
rust-crypto = "0.2.36"
chrono = "0.4"
rand_core = {version = "0.6.0", features = ["getrandom"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
dirs = "4.0"
dialoguer = "0.10.2"
colored = "2.0.0"
clipboard = "0.5.0"